--- a/hafta1odev/favorikahraman/serdaryuzbasi.html
+++ b/hafta1odev/favorikahraman/serdaryuzbasi.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Sungurların Efsane Komutanı Yüzbaşı Serdar Kimdir</h1> <br>
 
-    <img src="favorikahraman/images.jpg" alt="Yüzbaşı Serdar Mert" width="400">
+    <img src="src/img/images.jpg" alt="Yüzbaşı Serdar Mert" width="400">
 
 
     <h3>Biyografisi</h3>
