--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Sungurların Efsane Komutanı Yüzbaşı Serdar Kimdir</h1> <br>
 
-    <img src="\mf107\hafta1odev\favorikahraman\serdaryuzbasi.html" alt="Yüzbaşı Serdar Mert" width="400">
+    <img src="\mf107\hafta1odev\favorikahraman\src\img\images.jpg" alt="Yüzbaşı Serdar Mert" width="400">
 
 
     <h3>Biyografisi</h3>
