--- a/etutler/etut1/index.html
+++ b/etutler/etut1/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+
         <nav>
             <ul>
                 <li><a href="">Anasayfa</a></li>
@@ -14,6 +15,43 @@
                 <li><a href="">İletişim</a></li>
             </ul>
         </nav>
+
     </header>
+
+    <main>
+        <section>
+            <h1>Uygun Alsana</h1>
+            <p>Uygun fiyata kaliteli hizmet</p>
+        </section>
+
+        <hr>
+
+        <section>
+            <h2>Bizi Tanıyın</h2>
+            <p>Siverel'li</p>
+        </section>
+
+        <hr>
+
+        <section>
+            <h3>Bizimle İletişime Geçin</h3>
+            <form>
+                <label for="">Adınız</label>
+                <br>
+                <input type="text"><br><br>
+
+                <label for="">Soyadınız</label>
+                <br>
+                <input type="text"><br>
+
+                <label for="">Mail Adresiniz</label>
+                <br>
+                <input type="text"><br>
+            </form>
+        </section>
+
+        <hr>
+
+    </main>
 </body>
 </html>
