--- a/index.html
+++ b/index.html
@@ -1,89 +1,123 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yüzbaşı Serdar</title>
+    <!--Css-->
+    <link rel="stylesheet" href="style.css">
+    <title>Uygun Alsana</title>
 </head>
 <body>
-    <h1>Sungurların Efsane Komutanı Yüzbaşı Serdar Kimdir</h1> <br>
+    <!--Navbar-->
+    <nav class="navbar">
+        <div class="logo">
+            <img src="img/uygunalsana.png" alt="Logo">
+        </div>
+        <ul class="menu">
+            <li class="aktif"><a href="https://www.uygunalsana.com/" target="_blank">Home</a></li>
+            <li><a href="https://www.uygunalsana.com/hakkinda" target="_blank">About</a></li>
+            <li><a href="https://www.uygunalsana.com/category/all-products" target="_blank">Products</a></li>
+        </ul>
+        <div class="arama">
+            <input type="text" placeholder="Arama...">
+            <button>Ara</button>
+        </div>
+    </nav>
 
-    <img src="hafta1odev/favorikahraman/src/img/images.jpg" alt="Yüzbaşı Serdar Mert" width="400">
+    <div class="tema-secici">
+        <button onclick="temaDegistir('light')">Light</button>
+        <button onclick="temaDegistir('dark')">Dark</button>
+        <button onclick="temaDegistir('blue')">Blue</button>
+    </div>
 
+     <!-- Tema değiştirme işlevi -->
+  <script>
+    function temaDegistir(tema) {
+      const navbar = document.querySelector('.navbar');
+      const body = document.body;
 
-    <h3>Biyografisi</h3>
-    <p>Yüzbaşı Serdar Mert, 1997 yılında ve sonrasında Türkiye'de ve sınır ötesinde yaşanan
-        askeri operasyonlar, harekâtlar, eylemler, kalkınmalar, terörist suikastları gibi 
-        olaylara müdahale eden özel bir tim olan Sungurlar'ın komutanıdır. Cesur ve atılgan
-      bir kişiliği vardır. Aksiyon ve askeri dizi, film sevenler için dizinin ilk bölümünü izlemek için <a href="https://www.youtube.com/watch?v=aRdl0C-ujFA">buraya</a> tıklayın </p>
-      
+      navbar.classList.remove('light', 'dark', 'blue');
+      navbar.classList.add(tema);
 
-      <h3>Özellikleri</h3>
-    <ul>
-        <li>Yüzbaşı Serdar, Sungurlar'ın komutanı ve en deneyimli askeridir.</li>
-        <li>Askeri strateji ve taktik konularında uzmandır.</li>
-        <li>Silah arkadaşları tarafından büyük bir saygı görür.</li>
-        <li>Her türlü zorlu koşulda görev yapabilme yeteneğine sahiptir.</li>
-        <li>Yüksek motivasyon ve liderlik becerileri ile tanınır.</li>
-    </ul>
+      body.classList.remove('tema-light', 'tema-dark', 'tema-blue');
+      body.classList.add('tema-' + tema);
+    }
+  </script>
 
-    <h3>Süper Güçleri</h3>
-    <ul>
-        <li>Bir bölük askerin yapacağı işi bazen tek başına yapıyor.</li>
-        <li>Üzerine yüzlerce kurşun sıkılsa bile ya hiç isabet etmiyor ya da sadece omzundan sıyrıkla kurtuluyor.</li>
-        <li>Sniper olmamasına rağmen bazen yüzlerce metre öteden tek kurşunla düşman etkisiz hale getiriliyor.
-            Hatta havada gelen bir füzeyi bile vurabiliyor 
-        </li>
-    </ul>
+  <!--===========================================================================================================-->
 
-    <h3>Düşmanları</h3>
-    <ul>
-        <li>İlk bölümlerde en büyük düşmanı terörist Baran</li>
-        <li>Sonradan time dahil olacak büyük ayı ve biraderlerinin ajanı Naza</li>
-        <li>Terör örgütü lideri Cemal</li>
-        <li>Konsolos</li>
-        <li>İran Generali Kasım</li>
-    </ul>
+    <!--Profil Kartı-->
+    <div class="kapsayici">
+        <div class="ust"></div>
+        <img class="profilfoto" src="img/profile.jpg" alt="Profil Foto" />
+        <div class="alt">
+            <h1>Mehmet Emin Ketriz</h1>
+            <span>Founder of uygunalsana.com</span>
 
-    <h2>Tim Başvuru Formu</h2>
+            <div class="sosyalmedia">
+                <a href="https://www.facebook.com/mehmeteminketriz82" target="_blank"><img src="img/facebook.png" width="25" /></a>
+                <a href="https://x.com/meketriz" target="_blank"><img src="img/twitter.png" width="25" /></a>
+                <a href="https://www.instagram.com/mehmeteminketriz" target="_blank"><img src="img/instagram.png" width="25" /></a>
+                <a href="https://www.youtube.com/@sosyalcihad" target="_blank"><img src="img/youtube.png" width="25" /></a>
+            </div>
 
-    <form>
+            <div class="iletisim">
+                <button><a href="https://www.youtube.com/@sosyalcihad?sub_confirmation=1" target="_blank">Subscribe</a></button>
+                <button><a href="https://wa.me/905337376382" target="_blank">Message</a></button>
+            </div>
 
-        <label for="name_surname">Ad Ve Soyad</label>
-        <!-- required anahtar kelimesi ile bu inputun girilmesini zorunlu hale getiriyoruz -->
-        <!-- oninvalid ise alan geçersizse çalışır → özel uyarı mesajı gösterir. -->
-        <!-- setCustomValidity('...'): Tarayıcının göstereceği uyarı mesajını belirlemek için kullanılır. -->
-        <!-- oninput ise kullanıcı inputa bir şey yazdığında çalışır ve uyarı mesajını kaldırır. -->
-        <input id="name_surname" type="text" required
-        oninvalid="this.setCustomValidity('bu alanı doldurmanız zorunludur')" 
-        oninput="setCustomValidity('')"
-        ><br><br>
+            <div class="etkilesim">
+                <div class="like">
+                    <img src="img/like.png" width="20" />
+                    <span>60.4k</span>
+                </div>
+                <div class="comment">
+                    <img src="img/comment.png" width="20" />
+                    <span>20k</span>
+                </div>
+                <div class="share">
+                    <img src="img/share.png" width="20" />
+                    <span>12.4k</span>
+                </div>
+            </div>
+        </div>
+    </div>
 
-        <label for="superhero_name">Süper Kahraman Adı</label>
-        <input id="superhero_name" type="text" required 
-        oninvalid="this.setCustomValidity('bu alanı doldurmanız zorunludur')"
-        oninput="setCustomValidity('')"
-        ><br><br>
+    <!--===========================================================================================================-->
 
-        <label for="fav_superpower">Favori Süper Güç</label>
-        <input id="fav_superpower" type="text" required
-        oninvalid="this.setCustomValidity('bu alanı doldurmanız zorunludur')"
-        oninput="setCustomValidity('')"
-        ><br><br>
+    <!--Grid Kart-->
+    <div class="container">
+        <main class="card">
 
-        <!-- rows: satır yüksekliğini belirler, cols: metin kutusunun kaç karakter olacağını belirler -->
-        <label for="message">Başvuru Mesajı</label><br>
-        <textarea id="message" name="message"
-        rows="4"
-        cols="50"
-        placeholder="Lütfen başvuru mesajınızı buraya yazınız"
-        required
-        oninvalid="this.setCustomValidity('bu alanı doldurmanız zorunludur')"
-        oninput="setCustomValidity('')"
-        ></textarea><br>
+            <article>
+                <img src="img/s40max.png" class="gridcartimg">
+                <div class="text">
+                    <h3>Web Developer</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut repellat recusandae voluptate est iste consequatur.</p>
+                    <button>Join Us</button>
+                </div>
+            </article>
 
-        <input type="submit" value="Gönder">
-    </form>
+            <article>
+                <img src="img/v20pro.png" class="gridcartimg">
+                <div class="text">
+                    <h3>Web Designer</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut repellat recusandae voluptate est iste consequatur.</p>
+                    <button>Join Us</button>
+                </div>
+            </article>
+
+            <article>
+                <img src="img/lbk06.png" class="gridcartimg">
+                <div class="text">
+                    <h3>Graphic Designer</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut repellat recusandae voluptate est iste consequatur.</p>
+                    <button>Join Us</button>
+                </div>
+            </article>
+
+        </main>
+    </div>
 
 </body>
 </html>
