odev tamamıyla bitti

--- a/index.html
+++ b/index.html
@@ -92,27 +92,32 @@
             <article>
                 <img src="img/s40max.png" class="gridcartimg">
                 <div class="text">
-                    <h3>Web Developer</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut repellat recusandae voluptate est iste consequatur.</p>
-                    <button>Join Us</button>
+                    <h3>S40Max 1.62 inc Akıllı Saat</h3>
+                    <p>S40 MAX 1.62″ NFC | Pusula | AI Sesli BT Çağrı Akıllı Saat– Tüm Özellikleriyle Yeni Nesil Teknoloji</p>
+                    <button><a href="https://www.trendyol.com/pd/uygunalsana/s40-max-1-62-inc-pusula-nfc-ai-ses-bt-cagri-saglik-spor-izci-kablosuz-sarj-akilli-saat-p-953437412?boutiqueId=61&merchantId=1141447&filterOverPriceListings=false&sav=true" target="_blank">1750 ₺</a></button>
                 </div>
             </article>
 
             <article>
                 <img src="img/v20pro.png" class="gridcartimg">
                 <div class="text">
-                    <h3>Web Designer</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut repellat recusandae voluptate est iste consequatur.</p>
-                    <button>Join Us</button>
+                    <h3>V20 Bluetooth Kulaklık</h3>
+                    <p>Dokunmatik Ekranlı Şarj Kutusu, ANC Destekli Kulaklık ve Akıllı Saat Özellikleri Bir Arada!
+                        Oyun, müzik ve günlük yaşam deneyiminizi baştan aşağı değiştirecek inovatif bir setle tanışın: 
+                        uygunalsana.com V20 PRO! Bu benzersiz ürün, aktif gürültü engelleme (ANC) özellikli yüksek performanslı kulaklıkları, 
+                        bildirimleri okuyabileceğiniz ve akıllı saat fonksiyonlarına sahip dokunmatik ekranlı şarj kutusuyla birleştiriyor.</p>
+                    <button><a href="https://www.trendyol.com/uygunalsana/v20-pro-oyun-gps-li-takvim-dokunmatik-ekranli-gurultu-onleyici-kulaklik-anc-enc-p-951741813?boutiqueId=61&merchantId=1141447&filterOverPriceListings=false&sav=true" target="_blank">800 ₺</a></button>
                 </div>
             </article>
 
             <article>
                 <img src="img/lbk06.png" class="gridcartimg">
                 <div class="text">
-                    <h3>Graphic Designer</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut repellat recusandae voluptate est iste consequatur.</p>
-                    <button>Join Us</button>
+                    <h3>Bluetooth Kulaküstü Kulaklık</h3>
+                    <p>Bluetooth Kulaküstü Kulaklık – Konforlu, Şık ve Güçlü Ses Deneyimi
+                        Kaliteden ödün vermeden müziğin keyfini yaşatan Linkage LBK‑06ile tanışın! Ergonomik tasarımı, 
+                        güçlü ses performansı ve kablosuz özgürlüğüyle hem günlük kullanım hem de uzun yolculuklar için ideal bir seçenek.</p>
+                    <button><a href="https://www.trendyol.com/linkage/lbk-06-bluetooth-kulaustu-kulaklik-p-951547878?boutiqueId=61&merchantId=1141447&filterOverPriceListings=false&sav=true" target="_blank">500 ₺</a></button>
                 </div>
             </article>
 
