--- a/hafta5/gun2/16stringinterpolation.html
+++ b/hafta5/gun2/16stringinterpolation.html
@@ -5,12 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script>
-      for (let i = 0; i < 10; i++) {
-        if (i === 5) {
-          continue; // 5'i atla
-        }
-        document.write("Sayı: " + i + "<br>");
-      }
+      let metin = "Mehmet";
+      document.write(`Merhaba ${metin}, nasılsın?`); // AltGr + virgül tuşu
+      document.write("Merhaba ${metin}, nasılsın?"); // Şu şekilde olmuyor bektiki yapmak gerekiyor AltGr + virgül tuşu
     </script>
   </head>
   <body></body>
